# QRCodeGenerator

./: .gitignore  BBPO.doc  QRCodeGenerator.spec  README.md  main.py  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/feature_export_png_20260224/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/mvp_core_20260202/: index.md  metadata.json  plan.md  spec.md
src/: gui.py  qr_generator.py  word_generator.py
src/utils/: logger.py
tests/: test_filename_sanitize.py  test_qr_generator.py  test_word_generator.py
